--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<button class="button button-1" onclick="backMusic()"><img src="images/playIcon.png" alt="play"></button><!--
 				--><button class="button button-less" onclick="downMusic()"><img src="images/lessIcon.png" alt="play"></button><!--
 				--><button class="button button-play" id="btn" onclick="playAudio()"><img src="images/pauseIcon.png" alt="play"></button><!--
-				--><button class="button button-plus" onclick="upMusic()"><img src="images/plusion.png" alt="play"></button><!--
+				--><button class="button button-plus" onclick="upMusic()"><img src="images/plusIcon.png" alt="play"></button><!--
 				--><button class="button button-3" onclick="backMusic()"><img src="images/playIcon.png" alt="play"></button>
 			</div>
 		</div>
