--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
 			--><br><!--
 			--><input type="range" id="ranger" class="ranger-class" onchange="changeCurrentTime()"><!--
 			--><br><!--		
-			--><input type="file" id="fileBox" onclick="addArray()">
+			--><input type="file" id="song-file-box">
 		</div>
 	</div>
-	<script src="script.js"></script>
+	<script src="indexScript.js"></script>
 	
 </body>
 </html>
